@@ -46,12 +46,13 @@ See L<< the C<PluginBundle> role|Dist::Zilla::Role::PluginBundle >> for what thi
 
 =cut
 
-sub mvp_multivalue_args { return qw( auto_prereqs_skip copyfiles ) }
+sub mvp_multivalue_args { return qw( auto_prereqs_skip copy_files ) }
 
 sub mvp_aliases {
   return {
     'bumpversions' => 'bump_versions',
     'srcreadme'    => 'src_readme',
+    'copyfiles'    => 'copy_files',
   };
 }
 
@@ -268,22 +269,22 @@ has 'bump_versions' => (
   default => sub { undef },
 );
 
-=attr C<copyfiles>
+=attr C<copy_files>
 
 An array of files generated by C<Dist::Zilla> build to copy from the built dist back to the source dist
 
 If not specified, the default contents are as follows:
 
-  copyfiles = LICENSE
-  copyfiles = Makefile.PL
+  copy_files = LICENSE
+  copy_files = Makefile.PL
 
 These defaults can be wiped with:
 
-  copyfiles = none
+  copy_files = none
 
 =cut
 
-has copyfiles => (
+has copy_files => (
   is   => ro =>,
   isa  => 'ArrayRef[ Str ]',
   lazy => 1,
@@ -413,11 +414,12 @@ sub _none_match {
 sub _configure_basic_files {
   my ($self)         = @_;
   my (@ignore_files) = qw( README README.mkdn README.pod CONTRIBUTING.pod );
-  my (@copyfiles)    = ();
-  if ( _none_match 'none', @{ $self->copyfiles } ) {
-    push @copyfiles, @{ $self->copyfiles };
+  my (@copy_files)   = ();
+
+  if ( _none_match 'none', @{ $self->copy_files } ) {
+    push @copy_files, @{ $self->copy_files };
   }
-  push @ignore_files, @copyfiles;
+  push @ignore_files, @copy_files;
 
   $self->add_plugin(
     'Git::GatherDir' => {
@@ -440,8 +442,8 @@ sub _configure_basic_files {
     },
   );
 
-  if (@copyfiles) {
-    $self->add_named_plugin( 'CopyXBuild' => 'CopyFilesFromBuild', { copy => [@copyfiles] } );
+  if (@copy_files) {
+    $self->add_named_plugin( 'CopyXBuild' => 'CopyFilesFromBuild', { copy => [@copy_files] } );
   }
 
   return;
